adjusted list item spacing on 'team' section to fix mobile

--- a/sass/layout/_team-members.scss
+++ b/sass/layout/_team-members.scss
@@ -26,6 +26,7 @@
 
     li {
       max-width: 100%;
+      margin-bottom: 1.5em;
     }
   }
 }
